# oak_fcc_4p_ros

./: CMakeLists.txt  oak_ffc_4p.cpp  oak_ffc_4p.h
launch/: OV9782.launch
